# EVE_Sentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  railway.toml  render.yaml  run_bot.py
.github/workflows/: ci.yml  release-desktop.yml  release-docker.yml  release-mobile.yml
backend/: __init__.py  auth.py  cache.py  cli.py  config.py  logging_config.py  main.py  rate_limit.py  sso.py
backend/analyzers/: __init__.py  activity.py  assets.py  base.py  corp_history.py  custom_rules.py  killboard.py  ml_scorer.py  risk_scorer.py  social.py  standings.py  wallet.py
backend/api/: admin.py  analytics.py  analyze.py  audit.py  auth.py  bulk.py  fleet.py  ml.py  reports.py  rules.py  scheduler.py  shares.py  users.py  watchlist.py  webhooks.py
backend/auth/: __init__.py  apikey.py  permissions.py
backend/connectors/: __init__.py  alliance_auth.py  auth_bridge.py  discord.py  esi.py  esi_authenticated.py  seat.py  slack.py  zkill.py
backend/data/models/: .gitkeep
backend/database/: __init__.py  models.py  repository.py  session.py
backend/discord_bot/: __init__.py  bot.py
backend/ml/: __init__.py  feature_extractor.py  model.py  training.py
backend/models/: __init__.py  applicant.py  flags.py  report.py
backend/services/: __init__.py  audit.py  email_service.py  pdf_generator.py  scheduler.py
backend/templates/pdf/: report.html  styles.css
docs/: eve-nexus-reference.md
frontend/: __init__.py  router.py
frontend/static/: manifest.json  service-worker.js
frontend/static/css/: sentinel.css
frontend/templates/: base.html  offline.html
frontend/templates/components/: flag_card.html  navbar.html  pagination.html  risk_badge.html  sidebar.html
frontend/templates/pages/: admin.html  admin_rules.html  analytics.html  analyze.html  batch.html  character.html  compare.html  dashboard.html  fleet.html  report_detail.html  reports.html  settings.html  shared_report.html  watchlist.html
frontend/templates/partials/: analysis_result.html  reports_table.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: conftest.py  test_activity_analyzer.py  test_admin_api.py  test_analyzers.py  test_api.py  test_assets_analyzer.py  test_auth_bridge.py  test_cache.py  test_connectors.py  test_dashboard_charts.py  test_database.py  test_esi_authenticated.py  test_frontend.py  test_ml_scorer.py  test_models.py  test_pdf_generator.py  test_rate_limit.py  test_reports_api.py  test_risk_scorer.py  test_social_analyzer.py  test_sso.py  test_standings_analyzer.py  test_wallet_analyzer.py  test_webhooks.py
