[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eve-sentinel"
version = "0.1.0"
description = "Alliance Intel & Recruitment Analysis Tool for EVE Online"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AreteDriver" }
]
keywords = ["eve-online", "recruitment", "intel", "analysis", "esi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "weasyprint>=60.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "httpx>=0.25.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/AreteDriver/EVE-Sentinel"
Repository = "https://github.com/AreteDriver/EVE-Sentinel"
Issues = "https://github.com/AreteDriver/EVE-Sentinel/issues"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
